Style header and logo

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <title>Foursquare Search</title>
+
+    <link rel="stylesheet" href="style/core.css" />
+    <link rel="stylesheet" href="style/header.css" />
   </head>
   <body>
-
+    <header>
+      <div class="container">
+        <div class="logo">
+          <span class="hide">Foursquare</span>
+          <span>Search</span>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
