--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     <link rel="stylesheet" href="style/core.css" />
     <link rel="stylesheet" href="style/header.css" />
+
+    <meta name="theme-color" content="#2d5be3">
+    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1" />
   </head>
   <body>
     <header>
