--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" href="style/core.css" />
     <link rel="stylesheet" href="style/header.css" />
+    <link rel="stylesheet" href="style/search.css" />
 
     <meta name="theme-color" content="#2d5be3">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1" />
@@ -18,5 +19,11 @@
         </div>
       </div>
     </header>
+    <div class="search">
+      <form class="container">
+        <input type="text" placeholder="Enter a location..." />
+        <button>Search</button>
+      </form>
+    </div>
   </body>
 </html>
