--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="fsApp" ng-controller="mainController">
   <head>
     <title>Foursquare Search</title>
 
@@ -25,5 +25,6 @@
         <button>Search</button>
       </form>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js" type="text/javascript"></script>
   </body>
 </html>
