--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       </div>
     </header>
     <div class="search">
-      <form class="container">
-        <input type="text" placeholder="Enter a location..." />
+        <input type="text" placeholder="Enter a location..." ng-model="searchText" />
         <button>Search</button>
       </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js" type="text/javascript"></script>
+    <script src="script/config.js" type="text/javascript"></script>
+    <script src="script/fsApp.js" type="text/javascript"></script>
   </body>
 </html>
