--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
       </div>
     </header>
     <div class="search">
+      <form class="container" ng-submit="submitSearch()">
         <input type="text" placeholder="Enter a location..." ng-model="searchText" />
         <button>Search</button>
       </form>
+    </div>
+    <div class="results" ng-show="venues.length>0">
+      <h2>{{venues.length}} venues returned for "{{searchTerm}}"</h2>
+      <ul>
+        <li ng-repeat="venue in venues">
+          {{venue.name}}
+        </li>
+      </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js" type="text/javascript"></script>
