--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
     <div class="alert-error container" ng-show="errorMessage.length">
       {{errorMessage}}
     </div>
-    <div class="results" ng-show="venues.length>0">
+    <div class="results container" ng-show="venues.length>0">
       <h2>{{venues.length}} venues returned for "{{searchTerm}}"</h2>
       <ul>
         <li ng-repeat="venue in venues">
+          <img ng-src="{{venue.imageUrl}}" alt="{{venue.name}}" />
           <h3>{{venue.name}}</h3>
 
+
+          <div class="details"></div>
         </li>
       </ul>
     </div>
