--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h3>{{venue.name}}</h3>
             <div class="rating" style="background-color:#{{venue.ratingColor}}">{{venue.rating}}</div>
           </div>
-          <div class="details"></div>
+          <div class="clear"></div>
         </li>
       </ul>
     </div>
